--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site 3D Scroll Effect</title>
-    <link rel="stylesheet" href="style.css">
+    <title>My Portfólio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="progress-bar" id="progressBar"></div>
@@ -126,6 +126,6 @@
         <div class="scroll-arrow">↓</div>
     </div>
 
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
