--- a/index.html
+++ b/index.html
@@ -96,51 +96,50 @@
                     goals.</p>
                 </class=>
             </section>
-            <section class=" content-section section-4" data-section="3" id="Projects">
+            <section class="content-section section-4" data-section="3" id="Projects">
                 <h4 class="cabecario">Latest <span>Projects</span></h4>
-                <div class="portfolio-banner">
-                    <div class="portfolio-slider" style="--quantity: 4">
-                        <div class="item" style="--position: 1">
-                            <div class="front">
-                                <a href="https://leonardodlima.github.io/Portfolio/" target="_blank">
-                                    <div class="Skills"><i class="bi bi-filetype-html"></i></div>
-                                </a>
-                            </div>
-                            <div class="back"></div>
+                <div class="list">
+                    <div class="item active">
+                        <div class="poject-img">
+                            <img src="./img/portfolio.png" alt="image">
                         </div>
-                        <div class="item" style="--position: 2">
-                            <div class="front">
-                                <a href="https://leonardodlima.github.io/Portfolio/" target="_blank">
-                                    <div class="Skills"><i class="bi bi-filetype-html"></i></div>
-                                </a>
-                            </div>
-                            <div class="back"></div>
+                        <div class="content-project">
+                            <p class="project-tag">First project</p>
+                            <p class="project-name">Portfólio</p>
+                            <p class="description">My first project</p>
+                            <a class="btn-project-more" href="https://leonardodlima.github.io/Portfolio/" target="_blank">Find out more</a>
                         </div>
-                        <div class="item" style="--position: 3">
-                            <div class="front">
-                                <a href="https://leonardodlima.github.io/Portfolio/" target="_blank">
-                                    <div class="Skills"><i class="bi bi-filetype-html"></i></div>
-                                </a>
-                            </div>
-                            <div class="back"></div>
+                    </div>
+                    <div class="item">
+                        <div class="poject-img">
+                            <img src="./img/developer.png" alt="image">
                         </div>
-                        <div class="item" style="--position: 4">
-                            <div class="front">
-                                <a href="https://leonardodlima.github.io/Portfolio/" target="_blank">
-                                    <div class="Skills"><i class="bi bi-filetype-html"></i></div>
-                                </a>
-                            </div>
-                            <div class="back"></div>
+                        <div class="content-project">
+                            <p class="project-tag">Second project</p>
+                            <p class="project-name">Future project 2</p>
+                            <p class="description">Space to create a second project</p>
+                            <button class="btn-project-more">Find out more</button>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <div class="poject-img">
+                            <img src="./img/developer.png" alt="image">
+                        </div>
+                        <div class="content-project">
+                            <p class="project-tag">Third project</p>
+                            <p class="project-name">Future project 3</p>
+                            <p class="description">Space to create a third project</p>
+                            <button class="btn-project-more">Find out more</button>
                         </div>
                     </div>
                 </div>
-                <br>
-                <h3 class="txt-navegacao">
-                    Click on the buttons to navigate or use the A and D keys.
-                </h3>
-                <div class="bataoFoto">
-                    <button class="btnAnteFt" id="fotoAnterior"><i class="bi bi-arrow-left-circle-fill"></i>Previous </button>
-                    <button class="btnProxFt" id="proximaFoto">Next <i class="bi bi-arrow-right-circle-fill"></i></button>
+                <div class="arrows">
+                    <button class="arrow-btn" id="prev">
+                        <i class="bi bi-caret-left-fill"></i>
+                    </button>
+                    <button class="arrow-btn" id="next">
+                        <i class="bi bi-caret-right-fill"></i>
+                    </button>
                 </div>
             </section>
             <section class="content-section section-5 contato" data-section="4" id="Contact">
