--- a/index.html
+++ b/index.html
@@ -112,13 +112,14 @@
                     </div>
                     <div class="item">
                         <div class="poject-img">
-                            <img src="./img/developer.png" alt="image">
+                            <img src="./img/miniGame.png" alt="image">
                         </div>
                         <div class="content-project">
                             <p class="project-tag">Second project</p>
-                            <p class="project-name">Future project 2</p>
-                            <p class="description">Space to create a second project</p>
-                            <button class="btn-project-more">Find out more</button>
+                            <p class="project-name">Mini Game</p>
+                            <p class="description">Mini Game where you pop all the bubbles you can just by moving your hand behind the camera before time runs out!</p>
+                            <a class="btn-project-more" href="https://mini-game-iota-flame.vercel.app/" target="_blank">Find out more</a>
+                            
                         </div>
                     </div>
                     <div class="item">
